--- a/src/componets/Portfolio/portfolio.css
+++ b/src/componets/Portfolio/portfolio.css
@@ -29,28 +29,27 @@
     position: relative;
     width: 45%;
     margin: 10px;
+    height: fit-content;
+    overflow: hidden;
 }
 
 .card img {
     width: 100%;
-    /* height: 100%; */
+    height: fit-content;
     border-radius: 10px 10px 0 0;
-    margin-bottom: -5px;
+    margin-bottom: 0;
 }
 
 .card div {
     background: seagreen;
-    /* position: absolute; */
-    /* bottom: 0px; */
     color: white;
-    /* padding: 5px 10px; */
     display: flex;
     flex-wrap: wrap;
     opacity: .8;
     width: 100%;
     justify-content: center;
-    margin-top: 0;
     padding-bottom: 10px;
+    margin-top: 0;
 }
 
 .card div p {
@@ -64,7 +63,11 @@
 .portfolio .card:first-child {
     width: 100%;
     height: 40vh;
-    margin-bottom: 10vh;
+}
+
+.portfolio .card:first-child img {
+    width: 100%;
+    height: 29vh;
 }
 
 .portfolio .card:first-child h2 {
@@ -79,6 +82,11 @@
 
 @media screen and (max-width: 2000px) {
     .portfolio .card:first-child {
-        height: 80vh;
+        height: 60vh;
+    }
+    .portfolio .card:first-child img {
+        height: 50vh;
     }
 }
+
+
